rename .new-tweet-button from .new-tweet, fix alignment issues

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,10 +17,11 @@ nav > span {
   font-family: 'Bungee', sans-serif;
 }
 
-nav > div {
+.new-tweet-button {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 .fa-angles-down {
